--- a/test.tex
+++ b/test.tex
@@ -346,7 +346,7 @@ very close (0.4 ppm) to $R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$, wh
 \begin{equation}
 \lambdabar_M = 2l_p^2/R \approx R_1^3/R_{GC}^2
 \end{equation}  
-This \textit{synthesis relation} confirms the coherence of the whole procedure. It will be of central importance in the following (section 7.4), where the above lengths $l_P$, $R$, $\lambdabar_M$ and $R_{GC}$ will be connected with $R^{\prime}$, the above holographic reduction length of the Grandcosmos together with the following Kotov length. 
+This \textit{synthesis relation} confirms the coherence of the whole procedure. It will be of central importance in the following (section 7.4), where the above lengths $l_P$, $R$, $\lambdabar_M$ and $R_{GC}$ will be connected with $R^{\prime}$, the above holographic reduction length of the Grandcosmos together with the following Kotov length.
 
 \subsection{The Cosmic Coherent Oscillation (CCO)}
 
@@ -605,23 +605,37 @@ In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to
 
 Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists holography. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975. 
 
-While the standard Holographic Principle is limited to using the Plank area, it is natural to suppose that they are other holographic units. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
+While the standard Holographic Principle is limited to using the Plank area, it is natural to suppose that they are other holographic units. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here four more confirmations. 
+
+\subsection{The graviton and photon masses}
+The electromagnetic interaction is not really understood \cite{Okun}. Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. So convergent waves are of primordial importance, instead of current diverging ones. But the process is symetrical, so this leads to a oscillation. This is known a the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
+\begin{equation}
+\lambdabar_e = \hbar/m_e c = \hbar / m_{gr}C{gr}
+\end{equation}
+\begin{equation}
+\lambdabar_w = \hbar/m_w c = \hbar / m_{ph}C{ph}
+\end{equation}
+Equaling the tachonic celerities to C_1, and $ m_{ph}$ with $\hbar/cl_K$ (cite{Sanchez1}, one gets a \textit{ppb correlation} with the above single electron radius R_1:
+\begin{equation}
+C_1/c = m_e/m_{gr} = m_w/m_{ph} = l_K/\lambdabar_w \approx R_1/\lambdabar_e (4\pi p/p_0)^2 
+\end{equation}
+This leads to $m_{ph} \approx 1.2222 10^{-55}$ kg, and  $m_{gr} \approx 3.7223 10^{-67}$ kg, which fit cananical placs in the Topological Axis (Fig 1). Indeed (0.8 \%):
+\begin{equation}
+a_w = m_{ph}/m_{gr} \approx f(26)/f(24) 
+\end{equation}
 
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an holographic
-relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$ (to $0.01\%$):
+relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$, and the proton radius, identified to $\lambdabar_e/\sqtr{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \% and -0.1 \%):
 \begin{equation}
-4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
+e^{a} \approx 4\pi(R^{\prime}/l_{CMB})^{2} \approx (2\pi /3) (r_p/l_P)^3 
 \end{equation}
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
 thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
 connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
 argument in favor of a total conservation of information was tied to a non-evolution cosmology
 \cite{Nikolic}. 
-
-Note that \textit{$e^{a}$ is also compatible with the half volume of the proton, with
-the Planck length as unit}.
 
 So, while General Relativity and Quantum physics disagree about the nature of Space-Time, especially the non-locality phenomena, they agree for complete determinism, leading to \textit{the definitive rejection of the
 Copenhagen statistical interpretation}. 
