--- a/test.tex
+++ b/test.tex
@@ -608,7 +608,9 @@ Strangely enough, when the first author's publication was blocked (1993-1995), a
 While the standard Holographic Principle is limited to using the Plank area, it is natural to suppose that they are other holographic units. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here four more confirmations. 
 
 \subsection{The graviton and photon masses}
-The electromagnetic interaction is not really understood \cite{Okun}. Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. So convergent waves are of primordial importance, instead of current diverging ones. But the process is symetrical, so this leads to a oscillation. This is known a the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
+%Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. 
+
+The electromagnetic interaction is not really understood \cite{Okun}. Convergent and divergent waves leads to a oscillation\cite{Sanchez1}. This is known a the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
 \begin{equation}
 \lambdabar_e = \hbar/m_e c = \hbar / m_{gr}C{gr}
 \end{equation}
