--- a/test.tex
+++ b/test.tex
@@ -617,7 +617,7 @@ The electromagnetic interaction is not really understood \cite{Okun}. Convergent
 \begin{equation}
 \lambdabar_w = \hbar/m_w c = \hbar / m_{ph}C{ph}
 \end{equation}
-Equaling the tachonic celerities to C_1, and $ m_{ph}$ with $\hbar/cl_K$ (cite{Sanchez1}, one gets a \textit{ppb correlation} with the above single electron radius R_1:
+Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ (cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$:
 \begin{equation}
 C_1/c = m_e/m_{gr} = m_w/m_{ph} = l_K/\lambdabar_w \approx R_1/\lambdabar_e (4\pi p/p_0)^2 
 \end{equation}
