--- a/test.tex
+++ b/test.tex
@@ -629,7 +629,7 @@ a_w = m_{ph}/m_{gr} \approx f(26)/f(24)
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an holographic
-relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$, and the proton radius, identified to $\lambdabar_e/\sqtr{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \% and -0.1 \%):
+relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$, and the proton radius, identified to $\lambdabar_e/\sqrt{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \% and -0.1 \%):
 \begin{equation}
 e^{a} \approx 4\pi(R^{\prime}/l_{CMB})^{2} \approx (2\pi /3) (r_p/l_P)^3 
 \end{equation}
