--- a/test.tex
+++ b/test.tex
@@ -610,7 +610,7 @@ While the standard Holographic Principle is limited to using the Plank area, it 
 \subsection{The graviton and photon masses}
 %Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. 
 
-The electromagnetic interaction is not really understood \cite{Okun}. Convergent and divergent waves leads to a oscillation\cite{Sanchez1}. This is known a the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
+The electromagnetic interaction is not really understood \cite{Okun}. Convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
 \begin{equation}
 \lambdabar_e = \hbar/m_e c = \hbar / m_{gr}C{gr}
 \end{equation}
@@ -1330,6 +1330,8 @@ p. 1--16.
 \bibitem{Sanchez4} Sanchez F. M. ``Holic Principle: The coherence of the Universe`` (Sept 1995), Entelechies, 16th ANPA, 324-344.
 
 \bibitem{Grosmann} Grosmann, M. and Meyrueis P. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979.
+
+\bibitem{Gabor} Gabor D. A new microscopic principle.Nature 161, 777-778 (1948). 
 
 \bibitem{Preskill} Preskill J. ``Do black holes destroy information?'' Internat.
 Symp. on Black Holes, Membranes, Wormholes, and Superstrings (1992);
