--- a/test.tex
+++ b/test.tex
@@ -171,11 +171,11 @@ This is misleading since, as soon as the fine-tuning involves the observable Uni
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{\textit{The Topological Axis}(data in Table 1). The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the reunion of height 2D-1D holographic relations, hence the name `Topological Axis`. Two relations comes from the double large number correlation \cite{Eddington}, one comes from the Carr and Rees weak boson-gravitation relation Eq(11)), and one comes from the Davies analysis \cite{Davies}, involving the CMB wavelength. \textit{In the macro-physics side, with length unit $\lambdabar_e$, the Electron Compton reduced wavelength, the Universe circumference} $2\pi \times$ 13.812 billion light-years is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{massive string}, about 2.1 GeV. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor about 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ light-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
-The Space-Time-Matter Holic dimension d = 30 (section 6) is tied to $c$ times the cosmic \textit{Super-period} (section 5). 
-\textit{In the micro-physics side, with the same length unit $\lambdabar_e$}, Bott reductions from d = 30 lead to the \textit{gauge bosons}: d = 22 for the GUT one, ($10^{16}$ GeV), d = 14 for the weak one and d = 6 for the (\textit{massive}) gluons, about 8.6 MeV.
+\caption{\textit{The Topological Axis} (data in Table 1). The double natural logarithms y = ln(ln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the reunion of height 2D-1D holographic relations, hence the name `Topological Axis`. Two relations comes from the double large number correlation \cite{Eddington}, one comes from the Carr and Rees weak boson-gravitation relation Eq(1), and one comes from the Davies analysis \cite{Davies}, involving the Cosmological Microwave Background (CMB) wavelength. \textit{In the macro-physics side, with length unit $\lambdabar_e$, the Electron Compton reduced wavelength}, $6 \times$ the Hubble radius 13.812 billion light-years, Eq.(2), is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (CMB). This temperature $T \approx 2.725820805 Kelvin$, Eq. (31,) is identified to the common temperature of the couple Universe-Grandcosmos. It is tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.3); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{massive string}, about 2.1 GeV. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor about 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ light-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
+The Space-Time-Matter Holic dimension d = 30 (section 6) is tied to $c$ times the cosmic \textit{Supercycle period} (section 5). 
+\textit{In the micro-physics side, with the same length unit $\lambdabar_e$}, Bott reductions from d = 30 lead to the \textit{gauge bosons}: d = 22 for the Grand Unification Theory (GUT) one, ($ 2.30\cdot10^{16}$ GeV), d = 14 for the weak one and d = 6 for the (\textit{massive}) gluons, about 8.6 MeV.
 For the intermediary superstring value d = 10, there is the mean \textit{Pion}. For d $\approx \gamma \times \Gamma$, Y $\approx 495^2$ the square of the diminushed Green-Schwarz string dimension (496 - 1), it is the \textit{Brout-Englert-Higgs boson} (125.175 GeV). For k $\approx 2e^e$, it is the \textit{topon}, the visible Universe wavelength, the space quantum, which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
-   \textit{With unit $2\pi$ times the Nambu mass $m_N~=~137m_e$}\cite{Nambu}, d = 24 and 26 corresponds to the \textit{photon and graviton masses}, defined by two-step holographic interaction \cite{Sanchez1}.}
+   \textit{With unit $2\pi$ times the Nambu mass $m_N~=~am_e$}\cite{Nambu}, d = 24 and 26 corresponds to the \textit{photon and graviton masses}, defined by the two-step holographic interaction, section 7.4.
     \textit{This is the extrapolation toward smaller numbers of the Double Large Number correlation. The central dimension is d = 16, for a total $2^7$ of string dimensions in the Bott sequence. This suggests a liaison with the Eddington's matrix $16\times 16$}\cite{Eddington}.
 \label{fig:figure_label}
 \end{figure*}
