--- a/test.tex
+++ b/test.tex
@@ -175,7 +175,7 @@ This is misleading since, as soon as the fine-tuning involves the observable Uni
 The Space-Time-Matter Holic dimension d = 30 (section 6) is tied to $c$ times the cosmic \textit{Supercycle period} (section 5). 
 \textit{In the micro-physics side, with the same length unit $\lambdabar_e$}, Bott reductions from d = 30 lead to the \textit{gauge bosons}: d = 22 for the Grand Unification Theory (GUT) one, ($ 2.30\cdot10^{16}$ GeV), d = 14 for the weak one and d = 6 for the (\textit{massive}) gluons, about 8.6 MeV.
 For the intermediary superstring value d = 10, there is the mean \textit{Pion}. For d $\approx \gamma \times \Gamma$, Y $\approx 495^2$ the square of the diminushed Green-Schwarz string dimension (496 - 1), it is the \textit{Brout-Englert-Higgs boson} (125.175 GeV). For k $\approx 2e^e$, it is the \textit{topon}, the visible Universe wavelength, the space quantum, which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
-   \textit{With unit $2\pi$ times the Nambu mass $m_N~=~am_e$}\cite{Nambu}, d = 24 and 26 corresponds to the \textit{photon and graviton masses}, defined by the two-step holographic interaction\cite{Sanchez1}, section 7.4.
+   \textit{With unit $2\pi$ times the Nambu mass $m_N~=~am_e$}\cite{Nambu}, d = 24 and 26 corresponds to the \textit{photon and graviton masses}, defined by the two-step holographic interaction\cite{Sanchez1}, section 7.4.}
     \textit{This is the extrapolation of the Double Large Number correlation, using the Carr and Davies ones}, section 2. The central dimension is d = 16, for a total $2^7$ of string dimensions in the Bott sequence. This suggests a liaison with the Eddington's matrix $16\times 16$}\cite{Eddington}.
 \label{fig:figure_label}
 \end{figure*}
