--- a/test.tex
+++ b/test.tex
@@ -732,9 +732,7 @@ It is readily seen that $\sqrt{a} \approx exp(\pi /2)^2$. From $i = e^{(i\pi /2)
 \begin{equation}
 i^{-lni}/\sqrt{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
 \end{equation}
-The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for} $\pi$. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons.
-
-The standard model is unable to explain the three families of particles. Thus, the study of the muon and tau mass ratios is crucial. One observes (1 ppm, 56 ppm, 0.06 \%):
+The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for} $\pi$. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons. It is in fact a formal rationalisation, focussing on a acute problem of present standard model, which is unable to explain the three families of particles. Thus, the study of the muon and tau mass ratios is crucial. One observes (1 ppm, 56 ppm, 0.06 \%):
 \begin{equation}
 2/\delta \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu\approx d_e^2 lns/ln\tau
 \end{equation}
@@ -744,12 +742,11 @@ The following Koide relation \cite{Koide}, \textit{ which has a mathematical jus
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of the present Particle Physics standard.
-This Koide-Sanchez constant, $p_K \approx 1842.604994$, was detected in Eq. (), leading to (2 and 0.16 ppm):
+This Koide-Sanchez constant, $p_K \approx 1842.604994$, was detected in Eq. (), leading to the two ppb relations, where $\pi_a  = (355u+22)/(113u + 7)$, with $u = a\sqrt{2}/3$, and $H_e = 8 e^{2e}$ is the economic 33 ppm approximation of $H$:
 \begin{equation}
-p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 137a/136(a^{\prime}-1) d_e
+p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
 \end{equation}
-with $a^{\prime} = r_H/\lambdabar_e = aH/p$. The pertinence of the numbers 136 and 137 is shown in the following.
-
+with $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation. 
 
 \subsection{The Eddington's constant 137}
 
