--- a/test.tex
+++ b/test.tex
@@ -746,7 +746,7 @@ This Koide-Sanchez constant, $p_K \approx 1842.604994$, was detected in Eq. (), 
 \begin{equation}
 p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
 \end{equation}
-with $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation. 
+where $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation\cite{Conway}. 
 
 \subsection{The Eddington's constant 137}
 
