--- a/test.tex
+++ b/test.tex
@@ -742,11 +742,7 @@ The following Koide relation \cite{Koide}, \textit{ which has a mathematical jus
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of the present Particle Physics standard.
-This Koide-Sanchez constant, $p_K \approx 1842.604994$, was detected in Eq. (), leading to the two ppb relations, where $\pi_a  = (355u+22)/(113u + 7)$, with $u = a\sqrt{2}/3$, and $H_e = 8 e^{2e}$ is the economic 33 ppm approximation of $H$:
-\begin{equation}
-p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
-\end{equation}
-where $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation\cite{Conway}. 
+This Koide-Sanchez constant was detected in Eq.(), and willbe precusezd to ppb precision in section 9.4.
 
 \subsection{The Eddington's constant 137}
 
@@ -1102,7 +1098,13 @@ From the Koide relation, the corresponding value is $\tau \approx 3477.441701$, 
 \begin{equation}
 e^{e^e} \approx \tau (2a)^3/137^2
 \end{equation}
-From $\tau \approx e^{3e}$ and $8a \approx e^7$, this illustrates the reduction $e^e \approx 7 + 3e$. The pertinence of the economic number is confirmed.
+From $\tau \approx e^{3e}$ and $8a \approx e^7$, this illustrates the reduction $e^e \approx 7 + 3e$. The pertinence of the economic number is confirmed.  
+
+The corresponding $p_K \approx 1842.604994$, was detected in Eq. (). This leads to the two ppb relations, where $\pi_a  = (355u+22)/(113u + 7)$, with $u = a\sqrt{2}/3$, and $H_e = 8 e^{2e}$ is the economic 33 ppm approximation of $H$:
+\begin{equation}
+p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
+\end{equation}
+where $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation\cite{Conway}. 
 
 Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
@@ -1113,8 +1115,7 @@ The above relations show a dual form, the first one without any numerical factor
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
-Now,
- as was recalled above, the exponents represent the number of
+Now, as was recalled above, the exponents represent the number of
 dimensions. So, this represents a dimensional reduction, eliminating 137, from 9D and 6D to
 3D, which could be associated with the super-string theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
@@ -1129,6 +1130,8 @@ W \approx 137^{2} \Gamma / 3d_{e}
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
+
+
 \textit{The ultimate theory must explain these ppb relations.}
 
 
