--- a/test.tex
+++ b/test.tex
@@ -1100,11 +1100,16 @@ e^{e^e} \approx \tau (2a)^3/137^2
 \end{equation}
 From $\tau \approx e^{3e}$ and $8a \approx e^7$, this illustrates the reduction $e^e \approx 7 + 3e$. The pertinence of the economic number is confirmed.  
 
-The corresponding $p_K \approx 1842.604994$, was detected in Eq. (). This leads to the two ppb relations, where $\pi_a  = (355u+22)/(113u + 7)$, with $u = a\sqrt{2}/3$, and $H_e = 8 e^{2e}$ is the economic 33 ppm approximation of $H$:
+The corresponding Koide-sanchez constant is $p_K \approx 1842.604994$, which was detected in Eq. (). This leads to the two ppb relations, where $\pi_a  = (355u+22)/(113u + 7)$, with $u = a\sqrt{2}/3$, and $H_e = 8 e^{2e}$ is the economic 33 ppm approximation of $H$:
 \begin{equation}
 p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
 \end{equation}
-where $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation\cite{Conway}. 
+
+\begin{equation}
+n\tau/2 \approx HH_e(D/(D+1))^3 (p_K/p_G)^9
+\end{equation}
+
+where $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation\cite{Conway}. This confirms the Eddington's symmetry Hydrogen-Tau lepton\cite{Eddington}.
 
 Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
