--- a/test.tex
+++ b/test.tex
@@ -146,7 +146,7 @@ There is presently an intense debate in the physics community. While a minority 
 
 Only a minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, we show in section 2 that \textit{the later obeys the Topological Axis (Fig. (1), and, for the first time, they are connected with a series of ppb relations involving $e$, $\pi$ and $\gamma$} (section 9.4). This article shows also that the discovery of the sporadic groups, with, in particular, the monstruous moonshine correlation\cite{Borcherds}, is a crucial discovery for physics (section 8.5).
 
-In this debate unicity-multiplicity, pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. This no-said principle can be called the \textit{'Hierarchy Principle'}. So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. We interpret this central role of whole numbers by assuming that the Cosmos is a perfect computer. This is the very foundation of quantum physics. The section 3 shows the overall holographic quantification, breaking the Planck wall by a factor $10^{61}$, and \textit{justifying why the Cosmos is so large}.
+In this debate unicity-multiplicity, pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. This no-said principle can be called the \textit{'Hierarchy Principle'}. So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. We interpret this central role of whole numbers by assuming that the Cosmos is a perfect computer. This is the very foundation of quantum physics. The section 3 shows the overall holographic quantification, breaking the Planck wall by a factor $10^{61}$, solving at last the vacuum quantum energy dilemma and \textit{justifying why the Cosmos is so large}.
 This \textit{'Optimal Computation Principle'} enligths the First Principle of Thermodynamics, the energy conservation. This is a more direct and logical explanation than the standard 'time uniformity'. 
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the above recurse to the Multiverse conundrum.
@@ -158,7 +158,7 @@ The abnormal efficiency of elementary 3-fold dimensional analysis is justified i
 %\Delta f/f = R/l
 %end{equation}
 
-Finally, there is the central problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, annonced by the above discoverers, from Proust to Mandel. Indeed, Planck believed in the \textit{mathematical continuum}, and was reluctant of his own \textit{physical discovery}, until 1912, when Poincar\'{e} demonstrated that the quantification of matter-light interaction was mandatory\cite{Sanchez1}. The continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
+Finally, there is the central problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, annonced by the above discoverers, from Proust to Mandel. Indeed, Planck believed in the \textit{mathematical continuum}, and was reluctant of his own \textit{physical discovery}, until 1912, when Poincar\'{e} demonstrated that the quantification of matter-light interaction was mandatory\cite{Sanchez1}. The continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}, as shown in this article.
 
 Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. The key is the analysis of the dimensionless parameters (about 30 in the standard model), which are tightly contrived by a mysterious 'fine-tuning'. Happily, the Hierarchy Principle applies:  only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.4 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we consider rather the inverse of $\alpha$ and $\alpha_G$, we note $a$ and $a_G$. The present article will show that our notation, following Eddington\cite{Eddington}, is far more appropriate.
 
@@ -222,7 +222,7 @@ This suggests a liaison with the Eddigton's matrix $16 \times 16$ \cite{Eddingto
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics. The most famous fine tuning implies cosmic quantities, awkwardly called the `Double Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious clue in the steady-state cosmology based on the above \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
 This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
 
-This defines the Universe Hubble radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with the Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$. This is a significant refutation of the standard cosmology, but the fact that the so-called Universe age is $\approx 13.8~yr$ cannot be due to chance. This means that the standard approch has something right, but the interpretation is false.
+This defines the Universe Hubble radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with the Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$. This is a significant refutation of the standard cosmology, but the fact that the so-called Universe age is about 13.8 Gyr cannot be due to chance. This means that the standard approch has something right\cite{Sanchez2}, but the standard interpretation is false: in fact the Big Bang is permanent.
 
 Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: 
 \begin{equation}
@@ -246,7 +246,7 @@ $ R/r_H \approx (4\pi \lambda_{CMB}/r_H)^{4}$, precise to $0.6\%$.
 Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $R/ \lambdabar_{e} \approx
 ( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$. The appearance of the neutrino field is conform with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-antimatter Oscillatory Bounce \cite{Sanchez2}.
 
-It was noted in \cite{Carr} that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-Electron. With the above $R$ value, one observes the following more symmetrical relation involving the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
+It was noted in \cite{Carr} that $a_{G}$ is of order $W^{8}$, where $W$ is the W-boson-Electron mass ratio. With the above $R$ value, one observes the following more symmetrical relation involving the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
 R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 \end{equation}
@@ -263,20 +263,20 @@ So, while the two pillars of Physics, Relativity and Quantum Theory are unable t
 and Particle Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology \cite{Eddington}.
 
 Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics. Indeed, the exclusion principle applies in both solid state physics and in stellar physics. In particular, for a star containing $N_s$ atoms, in which the pressure has reached the quantum degeneracy value (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ \cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole century, was implicitly contained in astrophysics textbooks. 
-The universe radius amazingly appears as the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the Hubble measurement for $R$ was false by an order of magnitude.
+The universe radius amazingly appears as the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was aware of this Cosmologic Exclusion Principle, but he could not conclude since, at his epoch, the Hubble measurement for $R$ was false by an order of magnitude.
 
-The reason for this discrepancy is that \textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. \textit{The repulsive force is equivalent to reintroduce  the Einstein cosmological constant, but with invariant value} $1/R^{2}$. There is no need of the so-called `dark energy`.
+The reason for this discrepancy is that \textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explaining the steady-state exponential recession. \textit{The repulsive force is equivalent to reintroduce the Einstein cosmological constant, but with invariant value} $1/R^{2}$. There is no need of any additive so-called `dark energy`.
 
 The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, a typical galaxy group radius, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, (section 8.2), see Fig 1.
 
-In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a repulsive force between galaxy groups is necessary, in order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group, another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
+In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a repulsive force between galaxy groups is necessary, in order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group, another evacuation mechanism must occur: \textit{it would be the role of the massive black holes}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Toponic Holographic Quantification}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 In the above steady-state cosmological model, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$, defined at large. This predicts also the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
-corresponding to about one neutron by century in about a cathedral volume. 
+corresponding to about one neutron by century in a cathedral volume. 
 The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each topon, with wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$ is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension \cite{Sanchez1} of the standard Holographic Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
@@ -299,7 +299,7 @@ The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a c
 lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$, which can be identified with the $l_{P}$ - normalized quantum energy of vacuum, checked by the Casimir effect \cite{Duplantier}. The central problem of quantum cosmic physics is thus solved. Moreover, the objections against the Hawking approach using trans-Plankian frequencies are wiped out \cite{Damour}.
 
 In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
-\approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the elimination of $c$ between the classical electron radius and the Planck length \cite{Sanchez1}. In this way, the sphere of radius $R^{\prime}$ appears 
+\approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass\cite{Nambu}, of central importance in particle physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the elimination of $c$ between the classical electron radius and the Planck length \cite{Sanchez1}. In this way, the sphere of radius $R^{\prime}$ appears 
 as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
 S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
@@ -315,7 +315,7 @@ S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
 This series of diametrical circles generate, by scanning, the approximation of a sphere: thus it goes 
 from the disk to the sphere with area $4\pi(R/l_{P})^{2}$. Note that \textit{this justifies the factor $\frac{1}{4}$ in the BH entropy}. 
 But, for the approximation to be sufficient, \textit{the numbers $N_{m}$ must be very large}. In this way, the Cosmos-
-Computer can use the computational properties of the mathematical constants of the continuous analysis, such as $e$ and $\pi$, see section 9 and 10 (Discussion).
+Computer can use the computational properties of the mathematical constants of the continuous analysis, such as $e$ and $\pi$, (sections 8 and 9).
 
 The immensity of the Cosmos thus receives a computational holographic explanation, which is much simpler than that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with extreme precision, even with inflation. 
 
@@ -323,13 +323,13 @@ With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that
 \begin{equation}
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
-showing a kind of symmetry between the masses of particles. This directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant masses, in accordance with the Mach principle, which the relativity theory does not explain. Another shortcoming of this theory is that it does not define any inertial frame. However, the Doppler as-symmetry of the cosmic background indicates that the speed of our local group of galaxies is about 630 km/s. The cosmic background is, therefore, tied to the Newton absolute frame, the Grandcosmos.
+showing a kind of symmetry between the masses of particles. This directly involves the Planck's mass $m_{P}$, which presently has no known interpretation, except that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant masses, in accordance with the Mach principle, which the relativity theory does not explain. Another shortcoming of this theory is that it does not define any inertial frame. However, the Doppler as-symmetry of the cosmic background indicates that the speed of our local group of galaxies is about 630 km/s. The cosmic background is, therefore, tied to the Newton absolute frame, the Grandcosmos.
 
 The mathematical continuity is excluded by the above Computation Principle, so the time associated to the above 'topon': 
 \begin{equation}
 t_M = \lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s 
 \end{equation}
-is the new candidate for the `Chronon`, the `quantum of time`, so the Oscillatory Bounce has a frequency about $10^{104}$ Hz  \cite{Sanchez2} and respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry \cite{Sanchez1}. note that the tachyonic hypothesis is consistent with the non-local character of quantum mechanics.
+is the new candidate for the `Chronon`, the `quantum of time`, so the Oscillatory Bounce has a frequency about $10^{104}$ Hz  \cite{Sanchez2} and respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry \cite{Sanchez1}. \textit{The cosmic anti-matter dilemma is resolved by this matter-antimatter oscillation}. The tachyonic hypothesis is consistent with the non-local character of quantum mechanics.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Tachyonic Flickering Space-Time-Matter}
@@ -345,11 +345,11 @@ with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$
 R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly
 $$
-very close (0.4 ppm) to $R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$, where $p_{G} = P/2^{127/2}$, with $P = \lambdabar_e / l_P$, $\beta = (H - p)^{-1}$ the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Lenz-Wyler value $p$ (Section 9.2). Moreover, there is a direct connection with the Grandcosmos radius and the topon, to 0.90 \%:
+very close (0.4 ppm) to $R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$, where $p_{G} = P/2^{127/2}$, with $P = \lambdabar_e / l_P$, $\beta = (H - p)^{-1}$ the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Lenz-Wyler value $p$ (section 9.2). Moreover, there is a direct connection with the Grandcosmos radius and the topon, to 0.90 \%:
 \begin{equation}
 \lambdabar_M = 2l_p^2/R \approx R_1^3/R_{GC}^2
 \end{equation}  
-This \textit{synthesis relation} confirms the coherence of the whole procedure. It will be of central importance in the following (section 7.4), where the above lengths $l_P$, $R$, $\lambdabar_M$ and $R_{GC}$ will be connected with $R^{\prime}$, the above holographic reduction length of the Grandcosmos together with the following Kotov length.
+This \textit{synthesis relation} confirms the coherence of the whole procedure. It will be of central importance in the following.
 
 \subsection{The Cosmic Coherent Oscillation (CCO)}
 
@@ -365,12 +365,11 @@ $, itself tied to the weak force constant
 $
 G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \cdot 10^{-62} Joule \cdot m^{3}
-$
-. This introduces the product of two area speeds, confirming the flickering hypothesis:
+$. This introduces the product of two area speeds, confirming the flickering hypothesis:
 \begin{equation}
 (\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
-so the best measured cosmic quantity, the Kotov period, implies a symmetry between gravitation and weak nuclear force. This specifies the $G$ valu*e to $10^{-6}$ precision (ppm). It is compatible with the well-elaborate $(10^{-5})$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata value \cite{Tanabashi}, but the later is the mean between discordant measurements. Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
+so the best measured cosmic quantity, the Kotov period, implies a symmetry between gravitation and weak nuclear force. This specifies the $G$ value to $10^{-6}$ precision (ppm). It is compatible with the well-elaborate $(10^{-5})$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata value \cite{Tanabashi}, but the later is the mean between discordant measurements. Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment\cite{Tanabashi} :
 $$\begin{array}{ll}
 (2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3} \\
 \qquad  \qquad \Leftrightarrow \\
@@ -381,13 +380,13 @@ This value will be confirmed, in the ppb range, in Section 9.
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible with $p/p_{0}$:
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. This $t_K$ value will be confirmed, in the ppb range, in section 9.4. 
 
-From the holographic two-step interaction \cite{Sanchez1}, the Kotov period is associated with the photon mass, a conclusion independently reached by C. Marchal, apart a $2\pi$ factor \cite{Marchal}. It is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+From the holographic two-step interaction \cite{Sanchez1}, recalled in section 7.1, the Kotov period is associated with the photon mass, a conclusion independently reached by C. Marchal, apart a $2\pi$ factor \cite{Marchal}. It is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
 The ratios with $2\pi$ times the Nambu mass corresponds (respectively within 2.9 \% and 3.7 \%)  to the \textit{canonical values} n = 24 and n = 26 (Fig.1). Thus $f(26)/f(24) \approx a_w $ to 0.8 \%. The following relation (0.1\%), will be very usefull in the section 5:
 \begin{equation}
 M/m_{ph} \approx (3/e)O^2_M
 \end{equation}
-with $O_M$ the cardinal order of the Monster group.
+with $O_M$ the cardinal order of the Monster group\cite{Aschbacher}.
 
 \subsection{The omnipresence of CC0 in astrophysics}
 
@@ -442,7 +441,15 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance: $$ v_{n} = N v_{1} = N \hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass.
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance, with the electron classical radius $r_{e} = \lambdabar_e/a$  and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass:
+\begin{equation}
+v_{n}/n = v_{1} = \hbar /r_{e} m_{F}
+\end{equation}
+So
+\begin{equation}
+c/v_{1}\approx F/a
+\end{equation}
+with the normalised Fermi mass: $F = sqrt{a_{w}$.
 
 The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is sustained by the following section proving the invariance of the mean mass density $\rho_{c}$.
 
