--- a/test.tex
+++ b/test.tex
@@ -449,7 +449,7 @@ So
 \begin{equation}
 c/v_{1}\approx F/a
 \end{equation}
-with the normalised Fermi mass: $F = sqrt{a_{w}$.
+with the normalised Fermi mass: $F = \sqrt{a_{w}$.
 
 The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is sustained by the following section proving the invariance of the mean mass density $\rho_{c}$.
 
