--- a/test.tex
+++ b/test.tex
@@ -447,10 +447,9 @@ v_{n}/n = v_{1} = \hbar /r_{e} m_{F}
 \end{equation}
 So
 \begin{equation}
-c/v_{1}\approx F/a
+c/v_{1} \approx F/a
 \end{equation}
-with the normalised Fermi mass: $F = \sqrt{a_{w}$.
-
+with the normalized Fermi mass: $F = \sqrt{a_{w}$.
 The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is sustained by the following section proving the invariance of the mean mass density $\rho_{c}$.
 
 Much controversial is the Pioneer deceleration \cite{Nieto} $g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$. It corresponds to he Pioneer time $t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $ close to $t = R/c \approx 4.3587 \times 10^{17} s $. The following section will show a connection between the Kotov, Tifft and Pioneer effects.
