--- a/test.tex
+++ b/test.tex
@@ -441,7 +441,7 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance, with the electron classical radius $r_{e} = \lambdabar_e/a$  and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass:
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed $v_1 approx ca/F$ corresponding to the quantum resonance, with the electron classical radius $r_{e} = \lambdabar_e/a$  and where $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass:
 \begin{equation}
 v_{n}/n = v_{1} = \hbar /r_{e} m_{F}
 \end{equation}
